# brain-games-rust

./: .firebaserc  .gitignore  Cargo.toml  README.md  build_wasm.sh  firebase.json  package-lock.json  package.json  snowpack.config.js  tsconfig.json
.firebase/: hosting.d3d3.cache
.github/workflows/: rust.yml
src/: board.rs  board_space.rs  bot.rs  lib.rs  main.rs  play.rs  player.rs  train.rs
www/: index.html
www/js/: actions.js  board.js  game.js  game.worker.js  main.js
www/scripts/: board.ts  game.ts  game.worker.ts  main.ts
www/src/: actions.ts  board.ts  game.ts  game.worker.ts  main.ts
