[package]
name = "brain_games"
version = "0.1.0"
authors = ["dblue <dblue@deloitte.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8.4" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
bincode = "1.3.2"
wee_alloc = { version = "0.4.5", optional = true}
clap = { version = "3.0.5", features = ["derive"] }

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["wee_alloc"]
